Gallary Updated and Scrollbar color fixed

--- a/src/index.css
+++ b/src/index.css
@@ -9,22 +9,22 @@
   }
   
 ::-webkit-scrollbar-track {
-    background: #0a192f;
+    background: #030418;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #00b4d8;
+    background: #b584fd;
     border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #0096c7;
+    background: #9b5de5;
 }
 
 /* Firefox scrollbar */
 * {
     scrollbar-width: auto;
-    scrollbar-color: #00b4d8 #0a192f;
+    scrollbar-color: #2b0a36 #030418;
 }
 
 
